tests/tsc-references/types/thisType/unionThisTypeInFunctions/input.ts/es5.1.normal/output.js
function test(r) {
    r.method(12); // error
}
